// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders charts view - chart 1`] = `
<div
  className="insights-container container"
>
  <div>
    <div
      className="center-block section-header insight-header row"
    >
      <div
        className="insight-title"
      >
        New Insight
      </div>
    </div>
    <div
      className="charts-container row"
    >
      <div
        className="container"
      >
        <div
          className="insight-sub-header"
        >
          Pick a chart
        </div>
        <div
          className="insight-charts"
        >
          <div
            className="loaderoverlay"
          >
            <div
              className="loader-center"
            >
              <div
                className="loader"
              >
                Loading...
              </div>
            </div>
          </div>
          <div
            className="loaderoverlay"
          >
            <div
              className="loader-center"
            >
              <div
                className="loader"
              >
                Loading...
              </div>
            </div>
          </div>
        </div>
        <div
          className="insight-button-container"
        >
          <button
            className="refresh-button btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Refresh
          </button>
        </div>
      </div>
    </div>
  </div>
  
  
  
</div>
`;

exports[`renders charts view - no charts 1`] = `
<div
  className="insights-container container"
>
  <div>
    <div
      className="center-block section-header insight-header row"
    >
      <div
        className="insight-title"
      >
        New Insight
      </div>
    </div>
    <div
      className="charts-container row"
    >
      <div
        className="no-chart"
      >
        <div>
          Insert a chart to get started.
        </div>
        <button
          className="no-chart-button btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
  
  
  
</div>
`;

exports[`renders no projects view 1`] = `<div />`;
